<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FloatWindowDemoTools</string>
    <string name="action_settings">Settings</string>
    <string name="start_float_window">Start Float Window</string>
    <string name="tool_mem_percent">Memory Percent</string>
    <string name="tool_top_activity">Top Activity</string>
    <string name="tool_app_mem">App Memory: </string>
    <string name="tool_stopped_app">Stopped App</string>
    <string name="tool_app_mem_hint">Package Name</string>
    <string name="close_float">Close Float Window</string>
    <string name="sure">OK</string>
</resources>