<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/tool_list"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <CheckBox
            android:id="@+id/tool_mem_percent_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_mem_percent"/>
    <CheckBox
            android:id="@+id/tool_top_activity_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_top_activity"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <CheckBox
                android:id="@+id/tool_app_mem_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tool_app_mem"/>
        <TextView
                android:id="@+id/tool_app_mem_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/tool_app_mem_hint" android:textColor="#ff0000ff" android:textIsSelectable="false"/>
    </LinearLayout>

    <CheckBox
            android:id="@+id/tool_stopped_app_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_stopped_app"/>
</LinearLayout>
